fixed menu glitch on mobile

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -35,3 +35,12 @@ body{
     max-width:100%;
 }
 
+#Menu{
+    height:10vh;
+    top: 0vh;
+    position: relative;
+}
+
+#Logo {
+    top:0vh;
+}
